📝 Improve package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,14 @@
 [metadata]
 name = cmpbayes
 version = 0.0.1
-description = Tools to perform Bayesian data analysis on algorithm run results
-long_description = file: README.md
 author = David Pätzel
 author_email = david.paetzel@posteo.de
+description = Tools to perform Bayesian data analysis on algorithm run results
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/dpaetzel/cmpbayes
+project_urls =
+    Bug Tracker = https://github.com/dpaetzel/cmpbayes/issues
 classifiers  =
   Development Status :: 4 - Beta
   Intended Audience :: Developers
