--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = cmpbayes
-version = 0.0.1
+version = 0.0.2-beta
 author = David Pätzel
 author_email = david.paetzel@posteo.de
 description = Tools to perform Bayesian data analysis on algorithm run results
