--- a/setup.cfg
+++ b/setup.cfg
@@ -35,4 +35,6 @@ python_requires = >=3.8
 where = src
 
 [options.package_data]
-cmpbayes = pl_model.stan
+cmpbayes =
+  pl_model.stan
+  kruschke.stan
