📦 Fix packaging, pre-compile BimodalNonNegative

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,5 @@ extra_requires =
 where = src
 
 [options.package_data]
-cmpbayes =
-  bimodal_nonnegative.stan
-  kruschke.stan
-  pl_model.stan
+* =
+  *.stan
