--- a/setup.cfg
+++ b/setup.cfg
@@ -17,19 +17,21 @@ classifiers  =
   Programming Language :: Python :: 3
   Topic :: Scientific/Engineering
   Topic :: Scientific/Engineering :: Artificial Intelligence
-install_requires =
-  numpy ==1.21.5
-  pystan ==3.4.0
-  pandas ==1.3.5
-extra_requires =
-  arviz ==0.11.4
-  matplotlib ==3.5.1
 
 [options]
 package_dir  =
     = src
 packages = find:
 python_requires = >=3.8
+install_requires =
+  arviz ==0.11.4
+  numpy ==1.21.5
+  pandas ==1.3.5
+  pystan ==3.4.0
+  scipy ==1.7.3
+extra_requires =
+  click ==8.0.3
+  matplotlib ==3.5.1
 
 [options.packages.find]
 where = src
