--- a/setup.cfg
+++ b/setup.cfg
@@ -24,14 +24,14 @@ package_dir  =
 packages = find:
 python_requires = >=3.8
 install_requires =
-  arviz ==0.11.4
-  numpy ==1.21.5
-  pandas ==1.3.5
+  arviz ~=0.11
+  numpy ~=1.21.5
+  pandas ~=1.3
   pystan ==3.4.0
-  scipy ==1.7.3
+  scipy ~=1.7
 extra_requires =
-  click ==8.0.3
-  matplotlib ==3.5.1
+  click ~=8.0.3
+  matplotlib ~=3.5.1
 
 [options.packages.find]
 where = src
