--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ packages = find:
 python_requires = >=3.8
 install_requires =
   arviz ~=0.11
-  numpy ~=1.21.5
+  numpy
   pandas ~=1.3
   pystan ==3.4.0
   scipy ~=1.7
