📌 Unpin dependency versions in setup.cfg
Dependencies are pinned via Nix anyways and I just don't want to keep
track of the versions served by Nix in setup.cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,14 +24,14 @@ package_dir  =
 packages = find:
 python_requires = >=3.8
 install_requires =
-  arviz ~=0.11
+  arviz
   numpy
-  pandas ~=1.3
+  pandas
   pystan ==3.4.0
-  scipy ~=1.7
+  scipy
 extra_requires =
-  click ~=8.0.3
-  matplotlib ~=3.5.1
+  click
+  matplotlib
 
 [options.packages.find]
 where = src
